[gd_scene load_steps=2 format=3 uid="uid://n4xw3vnwyyyi"]

[ext_resource type="Script" path="res://hud/Hud.gd" id="1_7y4uc"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_7y4uc")

[node name="action_key" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.49
anchor_top = 0.488
anchor_right = 0.49
anchor_bottom = 0.488
offset_left = -33.8
offset_top = -34.04
offset_right = 29.2
offset_bottom = -8.04004
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="interaction" type="Label" parent="action_key"]
layout_mode = 0
offset_left = -20.0
offset_top = 18.0
offset_right = 90.0
offset_bottom = 44.0
text = "sadasdasdada"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_bar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_right = 201.0
offset_bottom = 9.0
value = 20.0
rounded = true
show_percentage = false

[node name="stamina_bar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_top = 9.0
offset_right = 201.0
offset_bottom = 15.0
value = 20.0
rounded = true
show_percentage = false
